--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
         <p>Today we can advice free</p>
         <nav>
-            <a href="form.html">Personal support</a>
+            <a href="/form.html">Personal support</a>
         </nav>
     </main>
     <footer>
