--- a/form.html
+++ b/form.html
@@ -30,44 +30,26 @@
             <br>
             <br>
             <label>Which type of support do you prefer:</label>
-            <label>
                 <fieldset id="group1">
-                    <input type="radio" name="group1" value="skin">Skin
-            </label>
-            <label>
-                <input type="radio" name="group1" value="hair">Hair
-            </label>
-            <label>
-                <input type="radio" name="group1" value="both">Both
-            </label>
-            </fieldset>
+                    <input type="radio" name="group1" value="skin"><label>Skin</label>
+                    <input type="radio" name="group1" value="hair"><label>Hair</label>
+                    <input type="radio" name="group1" value="both"><label>Both</label>
+                </fieldset>
             <br>
             <br>
             <label>Select your skintype:</label>
-            <fieldset id="group2">
-                <label>
-                    <input type="radio" name="group2" value="oil">Oil
-                </label>
-                <label>
-                    <input type="radio" name="group2" value="dry">Dry
-                </label>
-                <label>
-                    <input type="radio" name="group2" value="sensative">Sensative
-                </label>
+                <fieldset id="group2">
+                    <input type="radio" name="group2" value="oil"><label>Oil</label>
+                    <input type="radio" name="group2" value="dry"><label>Dry</label>
+                    <input type="radio" name="group2" value="sensative"><label>Sensative</label>
             </fieldset>
             <br>
             <br>
             <label>Select your hairtype:</label>
             <fieldset id="group3">
-                <label>
-                    <input type="radio" name="group3" value="straight">Straigt
-                </label>
-                <label>
-                    <input type="radio" name="group3" value="curly">Curly
-                </label>
-                <label>
-                    <input type="radio" name="group3" value="gray">Gray
-                </label>
+                    <input type="radio" name="group3" value="straight"><label>Straigt</label>
+                    <input type="radio" name="group3" value="curly"><label>Curly</label>
+                    <input type="radio" name="group3" value="gray"><label>Gray</label>
             </fieldset>
             <br>
             <br>
